# Del

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  NEW_APPROACH.md  main.cpp
src/cmake/: DelVersion.cmake
src/del/: del.cmake  del_driver.cpp  del_driver.hpp  del_lexer.l  del_parser.yy
src/del-old/: del_lexer.l
src/del/Analysis/: Analyzer.cpp  Analyzer.hpp
src/del/Ast/: Ast.hpp  Elements.cpp  Elements.hpp
src/del/Managers/: DefinedTypes.hpp  SymbolTable.hpp
src/del/Preprocessor/: Preprocessor.cpp  Preprocessor.hpp
src/del/Types/: Functions.hpp  Variables.hpp
src/del/ast/: Ast.hpp  Elements.cpp  Elements.hpp
src/examples/: comments.del  full.del  full_syntax.del  new.del  test.del
src/forge/: Aggregator.hpp  Forge.cmake  Forge.cpp  Forge.hpp  ForgeFwd.hpp  ForgeSignal.hpp  Generator.hpp  GeneratorIf.hpp  SystemSettings.hpp  about.md
src/forge/asm/: AsmInit.hpp  AsmMath.hpp  AsmSupport.cpp  AsmSupport.hpp
src/forge/blocks/: BlockAggregator.hpp  Common.hpp  LoadStore.hpp
src/forge/builder/: Builder.cpp  Builder.hpp
src/forge/codegen/: Codegen.cpp  Codegen.hpp  CodegenTypes.hpp  Generator.cpp  Generator.hpp
src/forge/constructs/: Expression.hpp  Function.cpp  Function.hpp  Variable.hpp
src/forge/datatypes/: DataType.hpp
src/forge/framework/: CodeStructures.hpp  DataTypes.hpp  Memory.hpp  Primitives.hpp  SymbolTable.cpp  SymbolTable.hpp
src/forge/instructions/: Assignment.cpp  Assignment.hpp  Breakable.hpp  Call.cpp  Call.hpp  Continuable.hpp  For.cpp  For.hpp  If.cpp  If.hpp  Instruction.hpp  Reassignment.cpp  Reassignment.hpp  Return.cpp  Return.hpp  While.cpp  While.hpp
src/forge/managers/: Memory.cpp  SymbolTable.cpp  SymbolTable.hpp
src/forge/reporting/: Report.hpp  (+12 more)
(+14 files in other folders)
